# openMP_Lab

./: CMakeLists.txt  build.sh  main.c  parallel_for.c  parallel_iteration.c  parallel_only_iteration.c  run.sh
